# neuro-fisher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml  run_tests.py  setup.py
demo/: simluate_observation_ring.py  simple_SNR_bound.ipynb  simulate_observation_gp.ipynb  simulate_observation_gp.py  simulate_observation_oscillation.py  simulater_obs_from_gp.py
neurofisher/: __init__.py  latent_dynamics.py  observation.py  optimize.py  simulate.py  snr.py  utils.py  vis_utils.py  visualize.py
neurofisherSNR/: __init__.py  latent_dynamics.py  observation.py  optimize.py  snr.py  utils.py  vis_utils.py
tests/: __init__.py  test_optimize_C.py  test_power_db.py  test_snr.py
